--- a/Ball-Dropper-2025 .html
+++ b/Ball-Dropper-2025 .html
@@ -5,14 +5,16 @@
     <style>
         body { margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; min-height: 100vh; background: #e0e0e0; }
         #gameContainer { position: relative; width: 356px; height: 760px; overflow: hidden; }
-        canvas { border: 1px solid black; background: #f0f0f0; position: absolute; top: 40px; left: 0; }
-        #banner { position: absolute; top: 0; left: 0; width: 100%; height: 30px; background: #333; color: white; font-family: Arial, sans-serif; font-size: 20px; text-align: center; line-height: 30px; z-index: 10; }
+        canvas { border: 1px solid black; background: #f0f0f0; position: absolute; top: 60px; left: 0; } /* Adjusted top from 40px to 60px */
+        #marqueeBanner { position: absolute; top: 0; left: 0; width: 100%; height: 30px; background: #0066cc; color: white; font-family: Arial, sans-serif; font-size: 20px; text-align: center; line-height: 30px; z-index: 11; }
+        #banner { position: absolute; top: 30px; left: 0; width: 100%; height: 30px; background: #333; color: white; font-family: Arial, sans-serif; font-size: 20px; text-align: center; line-height: 30px; z-index: 10; } /* Adjusted top from 0 to 30px */
         #gameOver { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-family: 'Arial Black', Gadget, sans-serif; font-size: 50px; font-weight: bold; color: #CC0000; display: none; text-align: center; text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.6); z-index: 100; width: 90%; }
         #scoreDisplay { position: absolute; top: 65%; left: 50%; transform: translate(-50%, -50%); font-family: Arial, sans-serif; font-size: 26px; font-weight: bold; color: #CC0000; display: none; text-align: center; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5); z-index: 100; }
     </style>
 </head>
 <body>
     <div id="gameContainer">
+        <div id="marqueeBanner">Tracy's Ball Droppers</div>
         <div id="banner">Score: 0 | Balls: 1 | Round: 1</div>
         <div id="gameOver">GAME OVER</div>
         <div id="scoreDisplay">Score: 0</div>
@@ -84,10 +86,10 @@
             function createPolygonRow(yPos) {
                 const newPolygons = [];
                 const offset = (rowCount % 2 === 1) ? POLYGON_SPACING / 2 : 0;
-                const maxPolys = Math.floor((CANVAS_WIDTH - 50) / POLYGON_SPACING) + 1; // Adjusted from 58 to 50 to allow one more polygon
+                const maxPolys = Math.floor((CANVAS_WIDTH - 50) / POLYGON_SPACING) + 1;
                 let diamondCount = 0;
                 for (let i = 0; i < maxPolys; i++) {
-                    const x = 29 + offset + (i * POLYGON_SPACING); // Shifted left from 33 to 29 to center the group
+                    const x = 29 + offset + (i * POLYGON_SPACING);
                     if (x + POLYGON_RADIUS > CANVAS_WIDTH - 12 || polygons.length + newPolygons.length >= MAX_OBJECTS) break;
                     let isDiamond = Math.random() < 0.2 && diamondCount < 2; if (isDiamond) diamondCount++;
                     const sides = isDiamond ? 4 : Math.floor(Math.random() * 4) + 3;
