Added Circles to the polygon lineup

--- a/Ball-Dropper-2025 .html
+++ b/Ball-Dropper-2025 .html
@@ -5,9 +5,9 @@
     <style>
         body { margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; min-height: 100vh; background: #e0e0e0; }
         #gameContainer { position: relative; width: 356px; height: 760px; overflow: hidden; }
-        canvas { border: 1px solid black; background: #f0f0f0; position: absolute; top: 60px; left: 0; } /* Adjusted top from 40px to 60px */
+        canvas { border: 1px solid black; background: #f0f0f0; position: absolute; top: 60px; left: 0; }
         #marqueeBanner { position: absolute; top: 0; left: 0; width: 100%; height: 30px; background: #0066cc; color: white; font-family: Arial, sans-serif; font-size: 20px; text-align: center; line-height: 30px; z-index: 11; }
-        #banner { position: absolute; top: 30px; left: 0; width: 100%; height: 30px; background: #333; color: white; font-family: Arial, sans-serif; font-size: 20px; text-align: center; line-height: 30px; z-index: 10; } /* Adjusted top from 0 to 30px */
+        #banner { position: absolute; top: 30px; left: 0; width: 100%; height: 30px; background: #333; color: white; font-family: Arial, sans-serif; font-size: 20px; text-align: center; line-height: 30px; z-index: 10; }
         #gameOver { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-family: 'Arial Black', Gadget, sans-serif; font-size: 50px; font-weight: bold; color: #CC0000; display: none; text-align: center; text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.6); z-index: 100; width: 90%; }
         #scoreDisplay { position: absolute; top: 65%; left: 50%; transform: translate(-50%, -50%); font-family: Arial, sans-serif; font-size: 26px; font-weight: bold; color: #CC0000; display: none; text-align: center; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5); z-index: 100; }
     </style>
@@ -92,7 +92,8 @@
                     const x = 29 + offset + (i * POLYGON_SPACING);
                     if (x + POLYGON_RADIUS > CANVAS_WIDTH - 12 || polygons.length + newPolygons.length >= MAX_OBJECTS) break;
                     let isDiamond = Math.random() < 0.2 && diamondCount < 2; if (isDiamond) diamondCount++;
-                    const sides = isDiamond ? 4 : Math.floor(Math.random() * 4) + 3;
+                    const shapeType = isDiamond ? 4 : Math.floor(Math.random() * 5); // 0-4: circle, triangle, square, pentagon, hexagon
+                    const sides = shapeType === 0 ? 32 : shapeType + 2; // 32 sides for circle, 3-6 for others
                     const value = isDiamond ? 0 : Math.max(1, (Math.floor(Math.random() * 3) + 1) + (rowCount * 3));
                     const color = isDiamond ? DIAMOND_COLOR : colors[Math.floor(Math.random() * colors.length)];
                     const poly = Bodies.polygon(x, yPos, sides, POLYGON_RADIUS, {
